Ensure logo and menu items do not overlap on small screens

--- a/app/assets/stylesheets/govuk_publishing_components/components/_layout-super-navigation-header.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_layout-super-navigation-header.scss
@@ -12,11 +12,18 @@ $navbar-height: 60px;
 
 $button-pipe-colour: $govuk-blue-tint-95;
 
-$after-link-padding: govuk-spacing(4);
-$after-button-padding-right: govuk-spacing(4);
-$after-button-padding-left: govuk-spacing(4);
+$menu-button-left-right-padding: govuk-spacing(3);
+$menu-button-left-right-padding-chevron: govuk-spacing(4);
 
-$search-button-padding: govuk-spacing(4);
+$menu-button-padding: govuk-spacing(1) $menu-button-left-right-padding;
+$menu-button-padding-chevron: govuk-spacing(1) $menu-button-left-right-padding-chevron;
+
+$search-button-left-right-padding: govuk-spacing(3);
+$search-button-left-right-padding-chevron: govuk-spacing(4);
+
+$search-button-padding: govuk-spacing(4) $search-button-left-right-padding;
+$search-button-padding-chevron: govuk-spacing(4) $search-button-left-right-padding-chevron;
+
 $search-icon-width: 21px;
 $search-icon-height: 20px;
 
@@ -197,8 +204,12 @@ $search-icon-height: 20px;
 // Specific styles for the "Menu" link
 .gem-c-layout-super-navigation-header__navigation-item-link {
   .gem-c-layout-super-navigation-header__navigation-item-link-inner {
-    padding: govuk-spacing(1) $after-link-padding;
+    padding: $menu-button-padding;
     border-right: 1px solid $button-pipe-colour;
+
+    @include govuk-media-query($from: $chevron-breakpoint) {
+      padding: $menu-button-padding-chevron;
+    }
   }
 
   &:focus {
@@ -211,6 +222,10 @@ $search-icon-height: 20px;
 // Specific styles for the "Search" link
 .gem-c-layout-super-navigation-header__search-item-link {
   padding: $search-button-padding;
+
+  @include govuk-media-query($from: $chevron-breakpoint) {
+    padding: $search-button-padding-chevron;
+  }
 }
 
 .gem-c-layout-super-navigation-header__search-item-link-icon,
@@ -249,9 +264,11 @@ $search-icon-height: 20px;
     display: inline-block;
     border-right: 1px solid $button-pipe-colour;
     margin: 0;
-    padding: govuk-spacing(1) govuk-spacing(4);
+    padding: $menu-button-padding;
 
     @include govuk-media-query($from: $chevron-breakpoint) {
+      padding: $menu-button-padding-chevron;
+
       &::before {
         @include chevron(govuk-colour("white"));
       }
@@ -401,8 +418,13 @@ $search-icon-height: 20px;
   height: $navbar-height;
   padding: $search-button-padding;
   position: relative;
-  width: calc(($search-button-padding * 2) + $search-icon-width); // width = button container left and right padding + icon width
+  width: calc(($search-button-left-right-padding * 2) + $search-icon-width); // width = button container left and right padding + icon width
   @include govuk-font($size: 19, $weight: "bold", $line-height: 20px);
+
+  @include govuk-media-query($from: $chevron-breakpoint) {
+    padding: $search-button-padding-chevron;
+    width: calc(($search-button-left-right-padding-chevron * 2) + $search-icon-width);  // width = button container left and right padding + icon width
+  }
 
   &::after {
     @include pseudo-underline;
